Fix navbar spacing actually and update register form

--- a/client/templates/application/styles.css
+++ b/client/templates/application/styles.css
@@ -28,7 +28,7 @@ body{
 }
 
 main {
-  margin-top: 4em;
+  margin-top: 6.5rem;
 }
 
 /*
